tests/type/errors/bar.ixi
foo(x:int) : int, int